--- a/app/assets/sass/unbranded.scss
+++ b/app/assets/sass/unbranded.scss
@@ -213,7 +213,11 @@ a:visited {
   text-decoration: none;
   font-weight: bold;
   font-size: 28px;
-  padding-left: 10px;
+  margin-left: 10px;
+}
+
+.govuk-link:hover {
+  text-decoration: underline;
 }
 
 
